Expand code-comment-pairs to prevent vertical overlap

--- a/templates/html/public/stylesheets/html.css
+++ b/templates/html/public/stylesheets/html.css
@@ -53,6 +53,7 @@ a relatively positioned parent. */
   display: block;
   margin: 0;
   padding: 0;
+  overflow-y: auto;
 }
 
 .code-comment-line {
